# llm_zoom_camp_2026

./: .gitignore  README.md  ingest.py  pyproject.toml  rag_helper.py  rag_helper_hw.py  rag_revision.py  toyaikit_test.py
lesson_1/: agentic_loop.py  homework_1.py  rag_helper.py  rag_test.py
lesson_2/llm-zoomcamp-hw2/: hw_2.py  pyproject.toml  vector_search.py  vector_search_pgvector.py  vector_search_sqlite.py
